# rextr

./: .gitignore  CMakeLists.txt  README.md
ai/: apis.py
cmdline/: Makefile  README.md
font_tools/: nftr_append.py  nftr_utils.py
scripts/: color_proc.py  ezconv.sh  gen_ct.sh  gen_ct_custom_codepoint.sh  gen_ct_nonutf_utf.sh  gen_ct_rv.sh  gen_ct_utf.sh  gen_ct_utf_char.sh  gen_ct_utf_h.sh  gen_from_uni.sh  gen_unicode_style_from_TBL.sh
src/cmd/: Option.hxx  extr.cxx  map.cxx  nodupl.cxx  quickextr.cxx  quickextr_nc.cxx  quickextr_ps1.cxx  quickrepack.cxx  quickrepack_enc.cxx
src/enc/: B8.hxx  CodePoint.hxx  Encoding.cxx  Encoding.hxx  Shiftjis.hxx  Unicode.cxx  Unicode.hxx
src/extr/: Block.hxx  Extract.cxx  Extract.hxx  QuickExtr.cxx  QuickExtr.hxx  Read.cxx  Read.hxx  Scene.hxx
src/repack/: BlockR.hxx  Check.cxx  Check.hxx  FontTable.cxx  FontTable.hxx  Packing.cxx  Packing.hxx  ReadR.cxx  ReadR.hxx  SceneR.hxx
src/utils/: Hash.cxx  Hash.hxx  Hex.hxx  HexSearch.hxx  Json.hxx  NFTR.cxx  NFTR.cxx.unfinished  Unicode.hxx  Wide.hxx  WriteBin.cxx  WriteBin.hxx
tl/: json_parse.py  tdeepl.py  test.py  tgemini.py  tgoogle.py  translate.py  wrapper.py
tl/google_trans_new/: constant.py  google_trans_new.py
translate/: translate.py
